<resources>
    <string name="title_activity_null">蓝海猎人</string>
    <string name="title_Login">蓝海猎人</string>
    <string name="new_user_register">新用户注册</string>
    <string name="sms_login">短信登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="login">登录</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_old_password">请输入旧密码</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="please_input_confirm_password">请输入确认密码</string>
    <string name="please_input_version_code">请输入验证码</string>
    <string name="please_input_account">请输入账号</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="get_version_code">获取验证码</string>
    <string name="next_step">下一步</string>
    <string name="account_login">账户登录</string>d
    <string name="confirm">确定</string>
    <string name="please_input_nick">请输入昵称</string>
    <string name="balance">余额</string>
    <string name="integral">积分</string>
    <string name="title_AddressList">我的地址</string>
    <string name="edit_address">编辑地址</string>
    <string name="title_IntegralMall">积分商城</string>
    <string name="title_ExchangeList">兑换列表</string>
    <string name="title_Test">测试</string>
    <string name="title_IntegralDetail">积分明细</string>
    <string name="title_WalletList">钱包列表</string>
    <string name="mine_order">我的订单</string>
    <string name="title_ExchangeShop">兑换商品</string>
    <string name="shop_inform">商品信息</string>
    <string name="once_exchange">立即兑换</string>
    <string name="need_integral">所需积分:</string>
    <string name="title_IntegralShopDetail">商品详情</string>
    <string name="user_center">个人中心</string>
    <string name="once_order">立即下单</string>
    <string name="set">设置</string>
    <string name="mine_wallet">我的钱包</string>
    <string name="title_SeaFoodMall">海鲜商城</string>
    <string name="title_SelectStore">选择门店</string>
    <string name="title_SearchStore">搜索</string>
    <string name="title_MallList">商城列表</string>
    <string name="title_ShopDetail">商品详情</string>
    <string name="title_ShopCar">购物车</string>
    <string name="title_MallConfirmOrder">确认下单</string>
    <string name="total">合计</string>
    <string name="title_MallOrderDetail">订单详情</string>
    <string name="order_successful">下单成功</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="title_Reflect">体现</string>
    <string name="look_more">查看更多</string>
    <string name="title_ModityPhone">修改密码</string>
    <string name="title_ModifyPhone">修改手机号</string>
    <string name="title_ModifyPassword">修改密码</string>
    <string name="title_VersionLogin">验证码登录</string>
</resources>
