<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/include_head_logo" />

    <LinearLayout
        android:id="@+id/lvUserName"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_46"
        android:layout_marginTop="@dimen/dp_40"
        android:background="@drawable/shape_user_name_background"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        app:layout_constraintWidth_percent="0.8">


        <EditText
            android:id="@+id/evPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableStart="@mipmap/ic_account"
            android:drawablePadding="@dimen/dp_10"
            android:hint="@string/please_input_account"
            android:inputType="phone"
            android:lines="1"
            android:maxLength="11"
            android:singleLine="true"
            android:textColor="@color/color_3"
            android:textColorHint="@color/color_c5c5c5" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/lvVersionCode"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_46"
        android:layout_marginTop="@dimen/dp_40"
        android:background="@drawable/shape_user_name_background"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvUserName"
        app:layout_constraintWidth_percent="0.8">

        <EditText
            android:id="@+id/evVersionCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:drawableStart="@mipmap/ic_verification_code"
            android:drawablePadding="@dimen/dp_10"
            android:hint="@string/please_input_version_code"
            android:lines="1"
            android:singleLine="true"
            android:inputType="number"
            android:textColor="@color/color_3"
            android:textColorHint="@color/color_c5c5c5" />

        <View
            android:layout_width="@dimen/dp_2"
            android:layout_height="@dimen/dp_20"
            android:background="@color/user_theme_color" />

        <TextView
            android:id="@+id/tvVersionCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:text="@string/get_version_code"
            android:textColor="@color/user_theme_color"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lvPassword"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_46"
        android:layout_marginTop="@dimen/dp_32"
        android:background="@drawable/shape_user_name_background"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvVersionCode"
        app:layout_constraintWidth_percent="0.8">

        <EditText
            android:id="@+id/evPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:drawableStart="@mipmap/ic_password"
            android:drawablePadding="@dimen/dp_10"
            android:lines="1"
            android:singleLine="true"
            android:hint="@string/please_input_password"
            android:inputType="textPassword"
            android:src="@mipmap/ic_account"
            android:textColor="@color/color_3"
            android:textColorHint="@color/color_c5c5c5" />

        <include layout="@layout/include_shop_eye" />
    </LinearLayout>


    <TextView
        android:id="@+id/tvNextStep"
        style="@style/baseBtnStyle"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/next_step"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvPassword"
        app:layout_constraintWidth_percent="0.8" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_46"
        android:layout_marginTop="@dimen/dp_32"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNextStep"
        app:layout_constraintWidth_percent="0.8">

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/account_login"
            android:textColor="@color/user_theme_color"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end|center_vertical"
            android:text="@string/forget_password"
            android:textColor="@color/user_theme_color"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>