<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/include_head_logo" />

        <LinearLayout
            android:id="@+id/lvUserName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/shape_user_name_background"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/default_padding"
            android:paddingEnd="@dimen/default_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo"
            app:layout_constraintWidth_percent="0.6">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_account" />

            <EditText
                android:id="@+id/evUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/please_input_account"
                android:lines="1"
                android:singleLine="true"
                android:textColor="@color/color_3"
                android:textColorHint="@color/color_e4e4e4" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lvPassword"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/shape_user_name_background"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/default_padding"
            android:paddingEnd="@dimen/default_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lvUserName"
            app:layout_constraintWidth_percent="0.6">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_password" />

            <EditText
                android:id="@+id/evPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/please_input_password"
                android:inputType="textPassword"
                android:lines="1"
                android:singleLine="true"
                android:textColor="@color/color_3"
                android:textColorHint="@color/color_e4e4e4" />

            <CheckBox
                android:id="@+id/cbEye"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/select_password_checkbox"
                android:button="@null"
                android:checked="true" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvLogin"
            style="@style/baseBtnStyle"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lvPassword" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:paddingStart="@dimen/default_padding"
            android:paddingEnd="@dimen/default_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLogin"
            app:layout_constraintWidth_percent="0.6">

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/new_user_register"
                android:textColor="@color/user_theme_color"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tvForgetPassword"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:text="@string/forget_password"
                android:textColor="@color/user_theme_color"
                android:textSize="16dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>