<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/include_head_logo" />

        <LinearLayout
            android:id="@+id/lvUserName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/shape_user_name_background"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/default_padding"
            android:paddingEnd="@dimen/default_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo"
            app:layout_constraintWidth_percent="0.6">

            <EditText
                android:id="@+id/evUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableStart="@mipmap/ic_account"
                android:drawablePadding="@dimen/dp_10"
                android:hint="@string/please_input_phone"
                android:inputType="phone"
                android:maxLength="11"
                android:textColor="@color/color_3"
                android:textColorHint="@color/color_c5c5c5" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/lvVersionCode"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/shape_user_name_background"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/default_padding"
            android:paddingEnd="@dimen/default_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lvUserName"
            app:layout_constraintWidth_percent="0.6">


            <EditText
                android:id="@+id/evVersionCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:drawableStart="@mipmap/ic_verification_code"
                android:drawablePadding="@dimen/dp_10"
                android:hint="@string/please_input_version_code"
                android:inputType="number"
                android:textColor="@color/color_3"
                android:textColorHint="@color/color_c5c5c5" />

            <View
                android:layout_width="@dimen/dp_2"
                android:layout_height="20dp"
                android:background="@color/user_theme_color" />

            <TextView
                android:id="@+id/tvVersionCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:text="@string/get_version_code"
                android:textColor="@color/user_theme_color"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvConfirm"
            style="@style/baseBtnStyle"
            android:layout_marginTop="20dp"
            android:text="@string/confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lvVersionCode"
            app:layout_constraintWidth_percent="0.6" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>