<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/include_head_logo" />


        <LinearLayout
            android:id="@+id/lvNickName"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_46"
            android:layout_marginTop="@dimen/dp_40"
            android:background="@drawable/shape_user_name_background"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/default_padding"
            android:paddingEnd="@dimen/default_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo"
            app:layout_constraintWidth_percent="0.8">


            <EditText
                android:id="@+id/evUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableStart="@mipmap/ic_nickname"
                android:drawablePadding="@dimen/dp_20"
                android:hint="@string/please_input_nick"
                android:textColor="@color/color_3"
                android:textColorHint="@color/color_c5c5c5" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lvHead"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_32"
            android:background="@drawable/shape_user_name_background"
            android:gravity="top"
            android:padding="@dimen/default_padding"
            android:paddingStart="@dimen/default_padding"
            android:paddingEnd="@dimen/default_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lvNickName"
            app:layout_constraintWidth_percent="0.8">

            <com.xhs.baselibrary.weight.RoundImageView
                android:id="@+id/ivHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_head" />

            <com.xhs.baselibrary.weight.NiceImageView
                android:id="@+id/ivUploadHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:src="@mipmap/ic_upload"
                app:is_circle="true" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvConfirm"
            style="@style/baseBtnStyle"
            android:layout_marginTop="20dp"
            android:text="@string/confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lvHead" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_32"
            android:paddingStart="@dimen/default_padding"
            android:paddingEnd="@dimen/default_padding"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvConfirm"
            app:layout_constraintWidth_percent="0.8">

            <TextView
                android:id="@+id/tvAccountLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/account_login"
                android:textColor="@color/user_theme_color"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/tvForgetPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/forget_password"
                android:textColor="@color/user_theme_color"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>